2022-02-24 - Website fixed, but not responsive and some fixes- Update 06

--- a/src/scss/layout-about/_layout-about-main.scss
+++ b/src/scss/layout-about/_layout-about-main.scss
@@ -70,5 +70,5 @@ a{
     border: black 1px solid;
     padding: 10px 10px 40px 10px;
     background-color: wheat;
-    transition: 5s;
+    transition: 2s;
 }
