--- a/src/scss/layout-coding/_layout-coding-main.scss
+++ b/src/scss/layout-coding/_layout-coding-main.scss
@@ -66,5 +66,6 @@ a{
         border: black 1px solid;
         background-color: wheat;
         padding: 10px 10px 40px 10px;
+        transition: 2s;
     }
 }
